--- a/index.html
+++ b/index.html
@@ -99,9 +99,12 @@
 					</div>
 				</div>
 			</div>
-			<div class="col-sm-6 text-center">
+			<div class="col-sm-6 text-center" >
 				<h2>A few words About me</h2>
-				<p>Hello, My name is George Vontzalidis. I was born in Karlovasi of Samos in </p>
+				<p class="lead">Hello, My name is George Vontzalidis. I was born at Karlovasi of Samos in 1997. Until my 18th year i was living in Karlovasi and went shcool there. After i graduated from High school i got accepted at the University of Patras, in the Computer
+					engineer and informatics deepartment, CEID. There i had the chance to learn about computer science. I found out that my interests are more on the software side than the hardware. I love everything about technology and computers, it really fascinates
+					me the plethora of things  you can accomplish with these tools. <br><br> On the left you can find my social media as well as my github account where you can find some of my projects. 
+				</p>
 			</div>
 		</div>
 	</div>
@@ -174,23 +177,23 @@
 				<hr class="my-4">
 				<blockquote class="blockquote">
 					<p class="mb-0">HTML 5</p>
-					<footer class="blockquote-footer">Advanced Level</footer>
+					<footer class="blockquote-footer">Working Knowledge</footer>
 				</blockquote>
 				<blockquote class="blockquote">
 					<p class="mb-0">CSS - Bootstrap</p>
-					<footer class="blockquote-footer">Advanced Level</footer>
+					<footer class="blockquote-footer">Working Knowledge</footer>
 				</blockquote>
 				<blockquote class="blockquote">
 					<p class="mb-0">Javacript</p>
-					<footer class="blockquote-footer">Advanced Level</footer>
+					<footer class="blockquote-footer">Working Knowledge</footer>
 				</blockquote>
 				<blockquote class="blockquote">
 					<p class="mb-0">ASP.Net</p>
-					<footer class="blockquote-footer">Advanced Level</footer>
+					<footer class="blockquote-footer">Basic Knowledge</footer>
 				</blockquote>
 				<blockquote class="blockquote">
-					<p class="mb-0">PHP</p>
-					<footer class="blockquote-footer">Beginner Level</footer>
+					<p class="mb-0">Node JS</p>
+					<footer class="blockquote-footer">Working Knowledge</footer>
 				</blockquote>
 			</div>
 			<div class="col-sm-4">
@@ -198,23 +201,23 @@
 				<hr class="my-4">
 				<blockquote class="blockquote">
 					<p class="mb-0">C#</p>
-					<footer class="blockquote-footer">Advanced Level</footer>
+					<footer class="blockquote-footer">Working Knowledge</footer>
 				</blockquote>
 				<blockquote class="blockquote">
 					<p class="mb-0">Java</p>
-					<footer class="blockquote-footer">Advanced Level</footer>
+					<footer class="blockquote-footer">Working Knowledge</footer>
 				</blockquote>
 				<blockquote class="blockquote">
 					<p class="mb-0">C</p>
-					<footer class="blockquote-footer">Advanced Level</footer>
+					<footer class="blockquote-footer">Working Knowledge</footer>
 				</blockquote>
 				<blockquote class="blockquote">
 					<p class="mb-0">Python</p>
-					<footer class="blockquote-footer">Beginner Level</footer>
+					<footer class="blockquote-footer">Working Knowledge</footer>
 				</blockquote>
 				<blockquote class="blockquote">
 					<p class="mb-0">C++</p>
-					<footer class="blockquote-footer">Beginner Level</footer>
+					<footer class="blockquote-footer">Basic Knowledge</footer>
 				</blockquote>
 			</div>
 			<div class="col-sm-4">
@@ -222,11 +225,11 @@
 				<hr class="my-4">
 				<blockquote class="blockquote">
 					<p class="mb-0">SQL</p>
-					<footer class="blockquote-footer">Advanced Level</footer>
+					<footer class="blockquote-footer">Working Knowledge</footer>
 				</blockquote>
 				<blockquote class="blockquote">
-					<p class="mb-0">Visual Studio</p>
-					<footer class="blockquote-footer">Advanced Level</footer>
+					<p class="mb-0">Mongo</p>
+					<footer class="blockquote-footer">Working Knowledge</footer>
 				</blockquote>
 			</div>
 		</div>
@@ -248,16 +251,13 @@
 			<div class="col-sm-6">
 				<h2 class="font-weight-light">Giorgos Vontzalidis</h2>
 				<hr class="my-4">
-				<p class="lead">Computer Engineer</p>
 				<h3 class="text-muted">Email</h3>
 				<p class="lead">gvontzalidis@hotmail.com</p>
 			</div>
 			<div class="col-sm-6">
 				<h2 class="font-weight-light">Address</h2>
 				<hr class="my-4">
-				<p class="lead">Karaiskaki 7</p>
-				<p class="lead">Patra, Greece</p>
-				<p class="lead">Postal Code, 26225</p>
+				<p class="lead">Patra <br> Greece</p>
 			</div>
 		</div>
 	</div>
