--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
 			<div class="col-sm-6">
 				<div class="card text-center">
 					<p class="lead card-header">About Me</p>
-					<img src="images/card2.jpg" class="card-img-top">
+					<img src="images/card2.JPG" class="card-img-top">
 					<div class="card-body social">
 						<h3>Giorgos Vontzalidis</h3>
 						<a href="https://www.facebook.com/giorgos.vontzalidis"><i class="fab fa-facebook"></i></a>
