--- a/index.html
+++ b/index.html
@@ -10,7 +10,6 @@
 	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
 	<link rel="stylesheet" href="style.css">
 	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.4.2/css/all.css" integrity="sha384-/rXc/GQVaYpyDdyxK+ecHPVYJSN9bmVFBvjA/9eOB+pb3F2w2N6fc5qB9Ew5yIns" crossorigin="anonymous">
-	<script src="myscript.js"></script>
 	<script>
 		function myFunction(){
 			("card-front").toggleClass("rotate-card-front");
@@ -22,7 +21,7 @@
 
 <!-- body section -->
 <body>
-	
+
 <!-- Navigation -->
 <nav class="navbar navbar-expand-md navbar-light fixed-top" role="navigation">
 	<div class="container-fluid">
@@ -47,22 +46,24 @@
 				<li class="nav-item">
 					<a class="nav-link" href="#Aboutme">About Me</a>
 				</li>
-				<li class="nav-item">
-					<a class="nav-link" href="#home">Home</a>
-				</li>
 			</ul>
 		</div>
 	</div>
 </nav>
 
-<!-- background img -->
-<div id="home">
+<!-- background img - particles -->
+<div id="wrapper">
+	<div id="particles-js"></div>
 	<div class="welcome-text">
 		<h3 class="font-weight-light">Hi, I am <br>Giorgos<br> Vontzalidis.</h3>
 		<br>
 		<h4 class="font-weight-light">Welcome to my Page!</h4>
 	</div>
 </div>
+
+<script src="particles.js"></script>
+<script src="app.js"></script>
+
 
 <div class="container-fluid">
 	<hr class="my-4">
