--- a/index.html
+++ b/index.html
@@ -103,8 +103,8 @@
 			</div>
 			<div class="col-sm-6 text-center" >
 				<h2>A few words About me</h2>
-				<p class="lead">Hello, My name is George Vontzalidis. I was born at Karlovasi of Samos in 1997. Until my 18th year i was living in Karlovasi and went school there. After i graduated from High school i got accepted at the University of Patras, in the Computer
-					engineer and informatics deepartment, CEID. There i had the chance to learn about computer science. I found out that my interests are more on the software side than the hardware. I love everything about technology and computers, it really fascinates
+				<p class="lead">Hello, My name is George Vontzalidis. I was born at Karlovasi of Samos in 1997. Until my 18th year I was living in Karlovasi and went school there. After I graduated from High school I got accepted at the University of Patras, in the Computer
+					engineer and informatics deepartment, CEID. There I had the chance to learn about computer science. I found out that my interests are more on the software side than the hardware. I love everything about technology and computers, it really fascinates
 					me the plethora of things  you can accomplish with these tools. <br><br> On the left you can find my social media as well as my github account where you can find some of my projects. 
 				</p>
 			</div>
