--- a/index.html
+++ b/index.html
@@ -22,6 +22,15 @@
 <!-- body section -->
 <body>
 
+
+	
+<script type="module">
+    import Chatbot from "https://cdn.jsdelivr.net/npm/flowise-embed/dist/web.js"
+    Chatbot.init({
+        chatflowid: "4be1a59f-4ad1-45c7-822b-511e7b607ee9",
+        apiHost: "http://chatbot.humanasset.com:3000",
+    })
+</script>
 <!-- Navigation -->
 <nav class="navbar navbar-expand-md navbar-light fixed-top" role="navigation">
 	<div class="container-fluid">
