--- a/index.html
+++ b/index.html
@@ -1,17 +1,26 @@
 <!DOCTYPE html>
 <html lang="eng">
+
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>Giorgos Vontzalidis</title>
-	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
-	<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
-	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
+	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
+		integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+	<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+		integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+		crossorigin="anonymous"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"
+		integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49"
+		crossorigin="anonymous"></script>
+	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"
+		integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
+		crossorigin="anonymous"></script>
 	<link rel="stylesheet" href="style.css">
-	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.4.2/css/all.css" integrity="sha384-/rXc/GQVaYpyDdyxK+ecHPVYJSN9bmVFBvjA/9eOB+pb3F2w2N6fc5qB9Ew5yIns" crossorigin="anonymous">
+	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.4.2/css/all.css"
+		integrity="sha384-/rXc/GQVaYpyDdyxK+ecHPVYJSN9bmVFBvjA/9eOB+pb3F2w2N6fc5qB9Ew5yIns" crossorigin="anonymous">
 	<script>
-		function myFunction(){
+		function myFunction() {
 			("card-front").toggleClass("rotate-card-front");
 			("card-front").toggleClass("rotate-card-back");
 		}
@@ -20,255 +29,291 @@
 </head>
 
 <!-- body section -->
+
 <body>
 
 
-	
-<!-- Navigation -->
-<nav class="navbar navbar-expand-md navbar-light fixed-top" role="navigation">
+
+	<!-- Navigation -->
+	<nav class="navbar navbar-expand-md navbar-light fixed-top" role="navigation">
+		<div class="container-fluid">
+
+			<a href="#" class="navbar-brand">
+				<h2 class="font-weight-light">Giorgos Vontzalidis</h2>
+			</a>
+			<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
+				aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+				<span class="navbar-toggler-icon"></span>
+			</button>
+			<div class="collapse navbar-collapse" id="navbarNav">
+				<ul class="navbar-nav ml-auto">
+					<li class="nav-item">
+						<a class="nav-link" href="#ContactMe">Contact Me</a>
+					</li>
+					<li class="nav-item">
+						<a class="nav-link" href="#Skills">Skills</a>
+					</li>
+					<li class="nav-item">
+						<a class="nav-link" href="#Education">Education</a>
+					</li>
+					<li class="nav-item">
+						<a class="nav-link" href="#Aboutme">About Me</a>
+					</li>
+				</ul>
+			</div>
+		</div>
+	</nav>
+
+	<!-- background img - particles -->
+	<div id="wrapper">
+		<div id="particles-js"></div>
+		<div class="welcome-text">
+			<h3 class="font-weight-light">Hi, I am <br>Giorgos<br> Vontzalidis.</h3>
+			<br>
+			<h4 class="font-weight-light">Welcome to my Page!</h4>
+		</div>
+	</div>
+
+	<script src="particles.js"></script>
+	<script src="app.js"></script>
+
+
 	<div class="container-fluid">
-
-		<a href="#" class="navbar-brand">
-			<h2 class="font-weight-light">Giorgos Vontzalidis</h2>
-		</a>
-		<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-			<span class="navbar-toggler-icon"></span>
-		</button>
-		<div class="collapse navbar-collapse" id="navbarNav">
-			<ul class="navbar-nav ml-auto">
-				<li class="nav-item">
-					<a class="nav-link" href="#ContactMe">Contact Me</a>
-				</li>
-				<li class="nav-item">
-					<a class="nav-link" href="#Skills">Skills</a>
-				</li>
-				<li class="nav-item">
-					<a class="nav-link" href="#Education">Education</a>
-				</li>
-				<li class="nav-item">
-					<a class="nav-link" href="#Aboutme">About Me</a>
-				</li>
-			</ul>
-		</div>
+		<hr class="my-4">
 	</div>
-</nav>
 
-<!-- background img - particles -->
-<div id="wrapper">
-	<div id="particles-js"></div>
-	<div class="welcome-text">
-		<h3 class="font-weight-light">Hi, I am <br>Giorgos<br> Vontzalidis.</h3>
-		<br>
-		<h4 class="font-weight-light">Welcome to my Page!</h4>
+	<div class="container-fluid text-center about_me" id="Aboutme">
+		<h4>About Me</h4>
 	</div>
-</div>
 
-<script src="particles.js"></script>
-<script src="app.js"></script>
-
-
-<div class="container-fluid">
-	<hr class="my-4">
-</div>
-
-<div class="container-fluid text-center about_me" id="Aboutme">
-	<h4>About Me</h4>
-</div>
-
-<div class="container">
-	<div class="row">
-		<div class="col-sm-6">
-			<hr class="my-4">
-		</div>
-		<div class="col-sm-6">
-			<hr class="my-4">
-		</div>
-	</div>
-</div>
-
-<!-- About me -->
-<div class="padding">
 	<div class="container">
 		<div class="row">
-			<div class="col-sm-6">
-				<div class="card text-center">
-					<p class="lead card-header">About Me</p>
-					<img src="images/card2.JPG" class="card-img-top">
-					<div class="card-body social">
-						<h3>Giorgos Vontzalidis</h3>
-						<a href="https://www.facebook.com/giorgos.vontzalidis"><i class="fab fa-facebook"></i></a>
-						<a href="https://www.instagram.com/giorgos_vontzalidis"><i class="fab fa-instagram"></i></a>
-						<a href="https://github.com/VoTheGreat"><i class="fab fa-github"></i></a>
-						<a href="https://twitter.com/GeorgeVon5"><i class="fab fa-twitter"></i></a>
+			<div class="col">
+				<hr class="my-4">
+			</div>
+			<div class="col">
+				<hr class="my-4">
+			</div>
+			<div class="col">
+				<hr class="my-4">
+			</div>
+		</div>
+	</div>
+
+	<!-- About me -->
+	<div class="padding">
+		<div class="container">
+			<div class="row">
+				<div class="col">
+					<div class="card text-center">
+						<p class="lead card-header">My Links</p>
+						<img src="images/card2.JPG" class="card-img-top">
+						<div class="card-body social">
+							<h3>Giorgos Vontzalidis</h3>
+							<a href="https://www.linkedin.com/in/george-vontzalidis-1168361b5/"><i
+									class="fab fa-linkedin-in"></i></a>
+							<a href="https://github.com/GiorgosVon"><i class="fab fa-github"></i></a>
+						</div>
+					</div>
+				</div>
+				<div class="col text-center">
+					<h2>A few words About me</h2>
+					<p class="lead">Hello, My name is George Vontzalidis. I was born at Karlovasi of Samos in 1997 and I
+						currently live in Greece. At the moment i am working as Software Engineer and Developer in Human
+						Asset. Although i enjoy learning and dealing with the latest
+						technologies my main area of interest is game development. In my free time i enjoy spending time
+						with friends, playing videogames and learning all the latest news, playing and listening to
+						music as well as reading books.
+					</p>
+				</div>
+				<div class="col text-center">
+					<h3>Here you can download my CV </h3>
+					<br><br>
+					<a href="My_Resume_ENG.pdf" download>
+						<img src="images/My_Resume_photo.png" alt="Your CV Picture" class="img-fluid cv-image">
+					</a>
+				</div>
+			</div>
+		</div>
+	</div>
+
+	<!-- fixed image -->
+	<div id="fixed">
+
+	</div>
+
+	<!-- jumbotron -->
+
+	<div class="jumbotron" id="Education">
+		<h3 class="display-4">Experience & Education</h3>
+	</div>
+
+	<div class="container">
+		<div class="row">
+			<div class="col">
+				<hr class="my-4">
+			</div>
+			<div class="col">
+				<hr class="my-4">
+			</div>
+			<div class="col">
+				<hr class="my-4">
+			</div>
+		</div>
+	</div>
+
+
+	<div class="container mt-5">
+		<div class="row">
+			<!-- Work Experience Section -->
+			<div class="col-md-4">
+				<div class="section">
+					<h2>Work Experience</h2>
+					<p>Software Engineer - Developer</p>
+					<p>Human Asset</p>
+					<p>Duration: Jul 2023 - Currently</p>
+					<p>Working with Articulate Storyline, AI LLM development and Unity.</p>
+				</div>
+			</div>
+
+			<!-- Education Section -->
+			<div class="col-md-4">
+				<div class="section">
+					<h2>Education</h2>
+					<p>Masters in Computer Engineering & Informatics</p>
+					<p>University of Patras</p>
+					<p>Graduation Year: 2023</p>
+				</div>
+			</div>
+
+			<!-- Foreign Languages Section -->
+			<div class="col-md-4">
+				<div class="section">
+					<h2>Foreign Languages</h2>
+					<p>English</p>
+					<p>Certificate of Proficiency (ECPE)</p>
+				</div>
+			</div>
+		</div>
+	</div>
+
+
+	<!-- Skills Header -->
+	<div class="jumbotron jumbotron2">
+		<h3 class="display-4">Skills</h3>
+	</div>
+
+	<!-- fixed image -->
+	<div id="coding">
+
+	</div>
+
+	
+
+	<body>
+		<div class="container mt-5">
+			<div class="row">
+				<!-- Coding Skills Section -->
+				<div class="col-md-4">
+					<div class="skill-section">
+						<h2>Coding</h2>
+						<ul class="skill-list">
+							<li><i class="fas fa-code"></i><span>C#</span></li>
+							<div class="skill-footer">
+								Proficiency Level: Intermediate
+							</div>
+							<li><i class="fas fa-code"></i><span>Python</span></li>
+							<div class="skill-footer">
+								Proficiency Level: Intermediate
+							</div>
+							<li><i class="fas fa-code"></i><span>Javacript</span></li>
+							<div class="skill-footer">
+								Proficiency Level: Intermediate
+							</div>
+							<li><i class="fas fa-code"></i><span>Web(HTML, CSS, JS)</span></li>
+							<div class="skill-footer">
+								Proficiency Level: Intermediate
+							</div>
+							<li><i class="fas fa-code"></i><span>C++</span></li>
+							<div class="skill-footer">
+								Proficiency Level: Beginner
+							</div>
+						</ul>
+					</div>
+				</div>
+	
+				<!-- Programs Skills Section -->
+				<div class="col-md-4">
+					<div class="skill-section">
+						<h2>Software</h2>
+						<ul class="skill-list">
+							<li><i class="fas fa-cogs"></i><span>Unreal Engine</span></li>
+							<div class="skill-footer">
+								Proficiency Level: Intermediate
+							</div>
+							<li><i class="fas fa-cogs"></i><span>Unity</span></li>
+							<div class="skill-footer">
+								Proficiency Level: Intermediate
+							</div>
+							<li><i class="fas fa-cogs"></i><span>Blender</span></li>
+							<div class="skill-footer">
+								Proficiency Level: Intermediate
+							</div>
+							<li><i class="fas fa-cogs"></i><span>Adobe Photoshop</span></li>
+							<div class="skill-footer">
+								Proficiency Level: Advanced
+							</div>
+						</ul>
+					</div>
+				</div>
+	
+				<!-- Other Skills Section -->
+				<div class="col-md-4">
+					<div class="skill-section">
+						<h2>Other Skills</h2>
+						<ul class="skill-list">
+							<li><i class="fas fa-toolbox"></i><span>Teamwork</span></li>
+							<li><i class="fas fa-toolbox"></i><span>Time Management</span></li>
+							<li><i class="fas fa-toolbox"></i><span>Problem Solving</span></li>
+						</ul>
 					</div>
 				</div>
 			</div>
-			<div class="col-sm-6 text-center" >
-				<h2>A few words About me</h2>
-				<p class="lead">Hello, My name is George Vontzalidis. I was born at Karlovasi of Samos in 1997. Until my 18th year I was living in Karlovasi and went school there. After I graduated from High school I got accepted at the University of Patras, in the Computer
-					engineer and informatics deepartment, CEID. There I had the chance to learn about computer science. I found out that my interests are more on the software side than the hardware. I love everything about technology and computers, it really fascinates
-					me the plethora of things  you can accomplish with these tools. <br><br> On the left you can find my social media as well as my github account where you can find some of my projects. 
-				</p>
-			</div>
 		</div>
-	</div>
-</div>
 
-<!-- fixed image -->
-<div id="fixed">
-	
-</div>
 
-<!-- jumbotron -->
 
-<div class="jumbotron" id="Education">
-	<h3 class="display-4">Education</h3>
-</div>
 
-<div class="padding">
-	<div class="container">
-		<div class="row education">
-			<div class="col-sm-4">
-				<h2 class="font-weight-light">2009-2015</h2>
-				<hr class="my-4">
-				<p id="ceid">High School/Secondary Diploma</p>
-				<hr class="my-4">
-				<p class="lead">High School of Samos, Greece</p>
 
-			</div>
-			<div class="col-sm-4">
-				<h2 class="font-weight-light">2015-Today</h2>
-				<hr class="my-4">
-				<p id="ceid">Computer Engineering and Informatics Department</p>
-				<hr class="my-4">
-				<h4 class="title">University of Patras</h4>
-				<p class="lead">Patra, Greece</p>
-				<p class="lead">5 year program</p>
-			</div>
-			<div class="col-sm-4">
-				<h2 class="font-weight-light">2015-2017</h2>
-				<hr class="my-4">
-				<p id="ceid">Certificate of Proficiency in English</p>
-				<hr class="my-4">
-				<h4 class="title">ECPE</h4>
-				<p class="lead">University of Michigan</p>
-			</div>
+
+	<div id="backgr">
+
+		<div class="container-fluid">
+			<hr class="my-4">
 		</div>
-	</div>
-</div>
 
-<!-- Skills Header -->
-<div class="jumbotron jumbotron2">
-	<h3 class="display-4">Skills</h3>
-</div>
-
-<!-- fixed image -->
-<div id="coding">
-	
-</div>	
-
-<!-- Coding Skills -->
-<div class="container" id="Skills">
-	<i class="fas fa-code padding"></i>
-	<h2 class="font-weight-light">Coding Skills</h2>
-</div>
-
-<div class="padding">
-	<div class="container">
-		<div class="row">
-			<div class="col-sm-4">
-				<h3 class="text-muted">WEB</h3>
-				<hr class="my-4">
-				<blockquote class="blockquote">
-					<p class="mb-0">HTML 5</p>
-					<footer class="blockquote-footer">Working Knowledge</footer>
-				</blockquote>
-				<blockquote class="blockquote">
-					<p class="mb-0">CSS - Bootstrap</p>
-					<footer class="blockquote-footer">Working Knowledge</footer>
-				</blockquote>
-				<blockquote class="blockquote">
-					<p class="mb-0">Javacript</p>
-					<footer class="blockquote-footer">Working Knowledge</footer>
-				</blockquote>
-				<blockquote class="blockquote">
-					<p class="mb-0">ASP.Net</p>
-					<footer class="blockquote-footer">Basic Knowledge</footer>
-				</blockquote>
-				<blockquote class="blockquote">
-					<p class="mb-0">Node JS</p>
-					<footer class="blockquote-footer">Working Knowledge</footer>
-				</blockquote>
+		<!-- Footer -->
+		<footer id="ContactMe">
+			<h2 class="text-muted text-center">Contact Me</h2>
+			<div class="container padding ft">
+				<div class="row">
+					<div class="col-sm-6">
+						<h2 class="font-weight-light">Giorgos Vontzalidis</h2>
+						<hr class="my-4">
+						<h3 class="text-muted">Email</h3>
+						<p class="lead">gvontzalidis@hotmail.com</p>
+					</div>
+					<div class="col-sm-6">
+						<h2 class="font-weight-light">Address</h2>
+						<hr class="my-4">
+						<p class="lead">Patra <br> Greece</p>
+					</div>
+				</div>
 			</div>
-			<div class="col-sm-4">
-				<h3 class="text-muted">Programming Languages</h3>
+			<div class="col-12">
 				<hr class="my-4">
-				<blockquote class="blockquote">
-					<p class="mb-0">C#</p>
-					<footer class="blockquote-footer">Working Knowledge</footer>
-				</blockquote>
-				<blockquote class="blockquote">
-					<p class="mb-0">Java</p>
-					<footer class="blockquote-footer">Working Knowledge</footer>
-				</blockquote>
-				<blockquote class="blockquote">
-					<p class="mb-0">C</p>
-					<footer class="blockquote-footer">Working Knowledge</footer>
-				</blockquote>
-				<blockquote class="blockquote">
-					<p class="mb-0">Python</p>
-					<footer class="blockquote-footer">Working Knowledge</footer>
-				</blockquote>
-				<blockquote class="blockquote">
-					<p class="mb-0">C++</p>
-					<footer class="blockquote-footer">Basic Knowledge</footer>
-				</blockquote>
+				<h5 class="text-center font-weight-light text-muted">&copy; Copyright Giorgos Vontzalidis.</h5>
 			</div>
-			<div class="col-sm-4">
-				<h3 class="text-muted">Others</h3>
-				<hr class="my-4">
-				<blockquote class="blockquote">
-					<p class="mb-0">SQL</p>
-					<footer class="blockquote-footer">Working Knowledge</footer>
-				</blockquote>
-				<blockquote class="blockquote">
-					<p class="mb-0">Mongo</p>
-					<footer class="blockquote-footer">Working Knowledge</footer>
-				</blockquote>
-			</div>
-		</div>
-	</div>
-</div>
-
-
-<div id="backgr">
-
-<div class="container-fluid">
-	<hr class="my-4">
-</div>
-
-<!-- Footer -->
-<footer id="ContactMe">
-	<h2 class="text-muted text-center">Contact Me</h2>
-	<div class="container padding ft">
-		<div class="row">
-			<div class="col-sm-6">
-				<h2 class="font-weight-light">Giorgos Vontzalidis</h2>
-				<hr class="my-4">
-				<h3 class="text-muted">Email</h3>
-				<p class="lead">gvontzalidis@hotmail.com</p>
-			</div>
-			<div class="col-sm-6">
-				<h2 class="font-weight-light">Address</h2>
-				<hr class="my-4">
-				<p class="lead">Patra <br> Greece</p>
-			</div>
-		</div>
-	</div>
-	<div class="col-12">
-		<hr class="my-4">
-		<h5 class="text-center font-weight-light text-muted">&copy; Copyright Giorgos Vontzalidis.</h5>
-	</div>
-</footer>
+		</footer>
 
 </body>
