--- a/index.html
+++ b/index.html
@@ -137,13 +137,14 @@
             <h2>A few words About me</h2>
             <p class="lead">
               Hello, My name is George Vontzalidis. I was born at Karlovasi of
-              Samos in 1997 and I currently live in Greece. At the moment i am
-              working as Software Engineer and Developer in Human Asset.
-              Although i enjoy learning and dealing with the latest technologies
-              my main area of interest is game development. In my free time i
-              enjoy spending time with friends, playing videogames and learning
-              all the latest news, playing and listening to music as well as
-              reading books.
+              Samos in 1997 and I currently live in Greece. At the moment I am
+              working as Software Engineer and Developer in Human Asset. I find
+              great satisfaction in continually learning and immersing myself in
+              the latest technologies, and I'm excited about advancing my
+              software development skills. I have a particular fondness for web
+              development, finding joy in crafting dynamic and interactive web
+              applications. As a hobby in my free time, I enjoy making
+              videogames!
             </p>
           </div>
           <div class="col text-center">
@@ -194,7 +195,8 @@
             <p>Human Asset</p>
             <p>Duration: Jul 2023 - Currently</p>
             <p>
-              Working with Articulate Storyline, AI LLM development and Unity.
+              Working with Articulate Storyline, AI LLM development, Web
+              Development and Unity.
             </p>
           </div>
         </div>
