--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
           <div class="col">
             <div class="card text-center">
               <p class="lead card-header">My Links</p>
-              <img src="images/card2.JPG" class="card-img-top" />
+              <img src="images/me.jpg" class="card-img-top" />
               <div class="card-body social">
                 <h3>Giorgos Vontzalidis</h3>
                 <a
@@ -150,9 +150,9 @@
           <div class="col text-center">
             <h3>Here you can download my CV</h3>
             <br /><br />
-            <a href="My_Resume_ENG.pdf" download>
+            <a href="George Vontzalidis CV.pdf" download>
               <img
-                src="images/My_Resume_photo.png"
+                src="images/MyResumePhoto.png"
                 alt="Your CV Picture"
                 class="img-fluid cv-image"
               />
@@ -246,7 +246,9 @@
                 <div class="skill-footer">Proficiency Level: Intermediate</div>
                 <li>
                   <i class="fas fa-code"></i
-                  ><span>Web Technologies (Html, css, NodeJS)</span>
+                  ><span
+                    >Web Technologies (Html, css, React, NodeJS, express)</span
+                  >
                 </li>
                 <div class="skill-footer">Proficiency Level: Intermediate</div>
                 <li><i class="fas fa-code"></i><span>C++</span></li>
