--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
         <div class="col text-center">
           <h3>Here you can download my CV</h3>
           <br /><br />
-          <a href="George Vontzalidis CV.pdf" download>
+          <a href="Giorgos Vontzalidis Resume_ENG.pdf" download>
             <img src="images/MyResumePhoto.png" alt="Your CV Picture" class="img-fluid cv-image" />
           </a>
         </div>
