--- a/index.html
+++ b/index.html
@@ -156,12 +156,12 @@
       <div class="col-md-4">
         <div class="section">
           <h2>Work Experience</h2>
-          <p>Software Engineer - Developer</p>
-          <p>Human Asset</p>
-          <p>Duration: Jul 2023 - Currently</p>
+          <p>Software Engineer Consultant</p>
+          <p>Netcompany</p>
+          <p>Duration: Mar 2024 - Currently</p>
           <p>
-            Working with Articulate Storyline, AI LLM development, Web
-            Development and Unity.
+            Working with IntelliJ,
+            Team - Maintenance
           </p>
         </div>
       </div>
@@ -203,9 +203,9 @@
           <div class="skill-section">
             <h2>Coding</h2>
             <ul class="skill-list">
-              <li><i class="fas fa-code"></i><span>C#</span></li>
+              <li><i class="fas fa-code"></i><span>Java</span></li>
               <div class="skill-footer">Proficiency Level: Intermediate</div>
-              <li><i class="fas fa-code"></i><span>Python</span></li>
+              <li><i class="fas fa-code"></i><span>C#</span></li>
               <div class="skill-footer">Proficiency Level: Intermediate</div>
               <li><i class="fas fa-code"></i><span>Javacript</span></li>
               <div class="skill-footer">Proficiency Level: Intermediate</div>
@@ -213,7 +213,11 @@
                 <i class="fas fa-code"></i><span>Web Technologies (Html, css, React, NodeJS, express)</span>
               </li>
               <div class="skill-footer">Proficiency Level: Intermediate</div>
-              <li><i class="fas fa-code"></i><span>C++</span></li>
+              <li>
+                <i class="fas fa-code"></i><span>SQL</span>
+              </li>
+              <div class="skill-footer">Proficiency Level: Intermediate</div>
+              <li><i class="fas fa-code"></i><span>C++, Python</span></li>
               <div class="skill-footer">Proficiency Level: Beginner</div>
             </ul>
           </div>
@@ -224,7 +228,9 @@
           <div class="skill-section">
             <h2>Software</h2>
             <ul class="skill-list">
-              <li><i class="fas fa-cogs"></i><span>Ubuntu</span></li>
+              <li><i class="fas fa-cogs"></i><span>IntelliJ, VS Code</span></li>
+              <div class="skill-footer">Proficiency Level: Intermediate</div>
+              <li><i class="fas fa-cogs"></i><span>SQL Developer</span></li>
               <div class="skill-footer">Proficiency Level: Intermediate</div>
               <li><i class="fas fa-cogs"></i><span>Unreal Engine</span></li>
               <div class="skill-footer">Proficiency Level: Intermediate</div>
@@ -244,6 +250,7 @@
             <h2>Other Skills</h2>
             <ul class="skill-list">
               <li><i class="fas fa-toolbox"></i><span>Teamwork</span></li>
+              <li><i class="fas fa-toolbox"></i><span>Team Leading</span></li>
               <li>
                 <i class="fas fa-toolbox"></i><span>Time Management</span>
               </li>
